compiler/fir/raw-fir/psi2fir/testData/rawBuilder/declarations/invalidCode/destructuringBeforeInitBlock.kt
class C {
    val (e) =

    init {
    }
}